utils/yt-dlp/yt-dlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-dlp-webui
  namespace: utils
  labels:
    app: yt-dlp-webui
spec:
  selector:
    app: yt-dlp-webui
  ports:
    - port: 3033
      targetPort: 3033
      protocol: TCP
  type: ClusterIP
